E2Eテスト完成 、MS.js動いてるバージョン

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
       <%= javascript_importmap_tags %>
       <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
       <%= javascript_include_tag "MS", defer: true %>
+      <%= javascript_include_tag "nav", defer: true %>
       <%#<%= javascript_include_tag "open-window", defer: true %>
      
     </head>
