--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -21,11 +21,7 @@
          </div> 
 
     </div>
-
    
-     
-   
-
     <div class="container">
         <!-- <div class="circle"></div> -->
         <div class="backgroundAvocad">
@@ -83,13 +79,11 @@
             </div>   
     </div>
    
-     
-    <%= javascript_include_tag "nav.js", defer: true %>
-    <% javascript_include_tag "contact.js", defer: true %>
-
-    
     <footer>    
       <h6 class="copy">&copy;OffSetCodeCraft.com All Rights Reserved</h6>
     </footer>
 
+    <%#<%= javascript_include_tag "nav.js", defer: true %>
+    <%= javascript_include_tag "contact.js", defer: true %>
 
+    
