--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -50,11 +50,11 @@
             </main>
         </div>
         
-            <section>
-                <ul class="works">
-                    <li class="works-li">
-                        <%= link_to "https://reminder5-27ef0.web.app", class: "reminder-img", target: "_blank" do %>
-                            <div class="works-container">
+                <section>
+                    <ul class="works">
+                        <li class="works-li">
+                            <%= link_to "https://reminder5-27ef0.web.app", class: "reminder-img", target: "_blank" do %>
+                                <div class="works-container">
                                     <div class="caption">
                                         <p class="used-language">Deliveravle - Official Appreciation</p>
                                         <p class="used-language">Date - Feb 2024</p>
@@ -72,28 +72,28 @@
 
                                     </div>
                                     <figure class="master">
-                                        <%= image_tag "works6.png", class: "works-img" %>
+                                        <%= image_tag "works6.png", class: "works-img lion" %>
                                     </figure>
                                 
                                     <figure class="clone">
                                         <%= image_tag "works6.png", class: "clone-img", alt: "clone" %>
                                     </figure>
                                 
-                                <div class="works-text">
-                                    <figcaption>
-                                        <h2 class="works-text-name">REMINDER App</h2>
-                                        <span class="caption-text">Front-end & Back-end</span>
-                                        <div class="architecture ">
-                                            <%= link_to "Architecture Chart", image_path("Blank diagram-12.png"), class: "architex" %>
-                                        </div>
-                                        <div class="code-detail">
-                                            <%= link_to "Code Detail", "https://github.com/henrry-sakurazaka/Reminder", class: "git zero"%>
-                                        </div>
-                                    </figcaption>
+                                    <div class="works-text">
+                                        <figcaption>
+                                            <h2 class="works-text-name">REMINDER App</h2>
+                                            <span class="caption-text">Front-end & Back-end</span>
+                                            <div class="architecture ">
+                                                <%= link_to "Architecture Chart", image_path("Blank diagram-12.png"), class: "architex" %>
+                                            </div>
+                                            <div class="code-detail">
+                                                <%= link_to "Code Detail", "https://github.com/henrry-sakurazaka/Reminder", class: "git zero"%>
+                                            </div>
+                                        </figcaption>                      
+                                    </div>
                                 </div>
-                            </div>
-                        <% end %>
-                    </li>
+                            <% end %>
+                        </li>
                         <li class="works-li">
                             <%= link_to "https://hello-typescript-8a1d9.web.app", class: "typescript-img", target: "_blank" do %>
                                 <div class="works-container">
@@ -104,25 +104,26 @@
                                         <p class="used-language"></p>
                                     </div>
                                     <figure class="master">
-                                        <%= image_tag "works7.png", class: "works-img" %>
+                                        <%= image_tag "works7.png", class: "works-img tiger" %>
                                     </figure>
                                 
                                     <figure class="clone">
                                         <%= image_tag "works7.png", class: "clone-img", alt: "clone" %>
                                     </figure>
-                                </a>
-                                <div class="works-text">
-                                    <figcaption>
-                                        <h2 class="works-text-name">Hello TypeScript </h2>
-                                        <span class="caption-text">Front-end </span>
-                                        <div class="code-detail">
-                                            <%= link_to "Code Details",  "https://github.com/henrry-sakurazaka/Hello-TypeScript", class: "git one" %>
-                                        </div>
-                                    </figcaption>
+                                
+                                    <div class="works-text">
+                                        <figcaption>
+                                            <h2 class="works-text-name">Hello TypeScript </h2>
+                                            <span class="caption-text">Front-end </span>
+                                            <div class="code-detail">
+                                                <%= link_to "Code Details",  "https://github.com/henrry-sakurazaka/Hello-TypeScript", class: "git one" %>
+                                            </div>
+                                        </figcaption>
+                                    </div>
                                 </div>
-                            </div>
-                        <% end %>
-                    </li>
+                            <% end %>
+                        </li>
+
                         <li class="works-li">
                             <%= link_to "http://sakurazaka.s324.xrea.com/mountain-view/mountain.html", class: "mountain-img", target: "_blank" do %>
                                 <div class="works-container">
@@ -133,25 +134,25 @@
                                         <p class="used-language"></p>
                                     </div>
                                     <figure class="master">
-                                        <%= image_tag "works3.png", class: "works-img" %>    
+                                        <%= image_tag "works3.png", class: "works-img snake" %>    
                                     </figure>
                                 
                                     <figure class="clone">
                                         <%= image_tag "works3.png", class: "clone-img", alt: "clone" %>
                                     </figure>
-                                </a>
-                                <div class="works-text">
-                                    <figcaption>
-                                        <h2 class="works-text-name">MOUNT UP YOUR LIFE</h2>
-                                        <span class="caption-text">Front-end</span>
-                                        <!-- <div class="code-deteal">
-                                            <a class="git" href="">Code Details</a>
-                                        </div> -->
-                                    </figcaption>
+                                
+                                    <div class="works-text">
+                                        <figcaption>
+                                            <h2 class="works-text-name">MOUNT UP YOUR LIFE</h2>
+                                            <span class="caption-text">Front-end</span>
+                                            <!-- <div class="code-deteal">
+                                                <a class="git" href="">Code Details</a>
+                                            </div> -->
+                                        </figcaption>
+                                    </div>
                                 </div>
-                            </div>
-                        <% end %>
-                    </li>
+                            <% end %>
+                        </li>
                         <li class="works-li">
                             <%= link_to "http://sakurazaka.s324.xrea.com/megumi-completa/megumi-completa3/HELLO5.html", class: "megumi-completa-img", target: "_blank" do %>
                                 <div class="works-container">
@@ -162,25 +163,25 @@
                                         <p class="used-language"></p>
                                     </div>
                                     <figure class="master">
-                                        <%= image_tag "works1.png", class: "works-img" %>
+                                        <%= image_tag "works1.png", class: "works-img leopard" %>
                                     </figure>
                                 
                                     <figure class="clone">
                                         <%= image_tag "works1.png", class: "clone-img", alt: "clone" %>
                                     </figure>
-                                </a>
-                                <div class="works-text">
-                                    <figcaption>
-                                        <h2 class="works-text-name">MEGUMI COMPLETA</h2>
-                                        <span class="caption-text">Design & Front-end & Back-end</span>
-                                        <div class="code-detail">
-                                            <%= link_to "Code Details", "https://github.com/henrry-sakurazaka/Megumi-Completa-Official", class: "git two" %>
-                                        </div>
-                                    </figcaption>
+                                
+                                    <div class="works-text">
+                                        <figcaption>
+                                            <h2 class="works-text-name">MEGUMI COMPLETA</h2>
+                                            <span class="caption-text">Design & Front-end & Back-end</span>
+                                            <div class="code-detail">
+                                                <%= link_to "Code Details", "https://github.com/henrry-sakurazaka/Megumi-Completa-Official", class: "git two" %>
+                                            </div>
+                                        </figcaption>
+                                    </div>
                                 </div>
-                            </div>
-                        <% end %>
-                    </li>
+                            <% end %>
+                        </li>
                                 
                         <li class="works-li">
                             <%= link_to "http://sakurazaka.s324.xrea.com/products-app/bbs.php", class: "engineer-post-img", target: "_blank" do %>
@@ -192,28 +193,25 @@
                                         <p class="used-language"></p>
                                     </div>
                                     <figure class="master">
-                                        <%= image_tag "works5.png", class: "works-img" %>
+                                        <%= image_tag "works5.png", class: "works-img elephant" %>
                                     </figure>
                                 
                                     <figure class="clone">
                                         <%= image_tag "works5.png", class: "clone-img", alt: "clone" %>
                                     </figure>
-                                </a>
-                                <div class="works-text">
-                                    <figcaption>
-                                        <h2 class="works-text-name">ENGENEER POST</h2>
-                                        <span class="caption-text">Back-end & Front-end</span>
-                                        <div class="code-detail">
-                                            <%= link_to "Code Details", "https://github.com/henrry-sakurazaka/Engineer-Post", class: "git three"%>
-                                        </div>
-                                    </figcaption>
+                                
+                                    <div class="works-text">
+                                        <figcaption>
+                                            <h2 class="works-text-name">ENGENEER POST</h2>
+                                            <span class="caption-text">Back-end & Front-end</span>
+                                            <div class="code-detail">
+                                                <%= link_to "Code Details", "https://github.com/henrry-sakurazaka/Engineer-Post", class: "git three"%>
+                                            </div>
+                                        </figcaption>
+                                    </div>
                                 </div>
-                            </div>
-                        <% end %>
-                    </li>
-                        
-                        
-                    
+                            <% end %>
+                        </li>                       
                     </ul>
                     <div class="nav-container">
                         <nav class="navi">
@@ -229,7 +227,7 @@
                             </div>  
                         </nav>
                     </div>   
-            </section>
+                </section>
         
             <div class="slide-inner">
 
