MS.jsをクラスに定義して再利用可能にしました

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -179,7 +179,7 @@
         </div>    
                 
         <span class="mark">+</span>
-        <div class="big-contact" ontouchstart="">
+        <div class="big-contact">
             <%=  link_to "CONTACT", contact_path, class: "big-text change-page" %>
         </div>  
   
