--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -241,7 +241,7 @@
                 
             <span class="mark"> + </span>
     
-            <div class="big-about" ontouchstart="">       
+            <div class="big-about">       
                 <%= link_to "ABOUT", about_path, class: "big-text cahnge-page"%>
             </div>
 
